2009-08-13  Jeffrey Stedfast  <fejj@novell.com>

	* fonts.cpp (TextFont::Load): When loading a font face from a
	source w/o any families specified, make sure to set master=0 so
	that we don't try to get extents from faces[-1].

	r:lewing

2009-08-13  Larry Ewing  <lewing@novell.com>

	r: kangaroo
	
	* writeablebitmap.cpp (InitializeFromBitmapSource): always use
	rgba pixelformat like sl3 does now.

2009-08-12  Chris Toshok  <toshok@ximian.com>

	* bitmapsource.h|cpp (SetBitmapData): add an extra parameter
	"own" (default: true) which, if true, causes the bitmap source to
	free the bitmapdata when it's destroyed.

	* cbinding.h|cpp: regen

2009-08-13  Andreia Gaita  <avidigal@novell.com>

	r: kangaroo

	Clock leak fixes (the splash and anything else that uses BeginStoryboard)

	* animation.[h|cpp]: Fix leaks when shutting down BeginStoryboard
	* timeline.[h|cpp]: Move Teardown methods from Storyboard to here
	so that other types of timeline stop leaking clocks when shutting
	down. If a timeline's clock has no parent, unref it to release the
	circular reference.

	* clock.[h|cpp]: Add Clear() method to clear child clocks when
	shutting down a ClockGroup. On RemoveChild and when destroying,
	set the child clock's parent to NULL. Add Shutdown() method to
	fix circular references with timeline

2009-08-12  Alan McGovern  <amcgovern@novell.com>

	* cbinding.h:
	* cbinding.cpp: regen r: toshok

	* control.h:
	* application.h:
	* application.cpp:
	* contentcontrol.h:
	* contentcontrol.cpp:
	* frameworkelement.cpp: A ContentControl which has no Template
	  needs to call into managed land to create a 'default
	  template'. When the Content is a UIElement, the UIElement is
	  used as the template root, otherwise a Grid + TextBlock
	  (with Binding) is used. This is the same as what
	  ContentPresenter does to its Content property. r: toshok

2009-08-12  Alan McGovern  <amcgovern@novell.com>

	* uielement.cpp: VisualParent should be set to null before