@@ -852,8 +852,8 @@ TextBlock::OnPropertyChanged (PropertyChangedEventArgs *args, MoonError *error)
 			font_source = manager->AddResource (source->stream);
 		else
 			font_source = NULL;
-
-		UpdateLayoutAttributes();
+		
+		UpdateFontDescriptions (false);
 		invalidate = false;
 	}
 	
